@@ -19,6 +19,7 @@ class EU3Province;
 class EU3World;
 class EU3Tech;
 class EU3Diplomacy;
+struct EU3Agreement;
 class CK2Province;
 
 class EU3Country
@@ -79,28 +80,29 @@ class EU3Country
 		double					learningScore;
 		int						absorbScore;
 
-		string					tag;
-		string					historyFile;
-		string					government;
-		string					primaryCulture;
-		vector<string>			acceptedCultures;
-		string					religion;
-		EU3Ruler*				monarch;
-		EU3Ruler*				heir;
-		EU3Ruler*				regent;
-		vector<EU3History*>	history;
-		vector<EU3Ruler*>		previousMonarchs;
-		string					techGroup;
-		double					governmentTech;
-		double					productionTech;
-		double					tradeTech;
-		double					navalTech;
-		double					landTech;
-		double					governmentTechInvestment;
-		double					productionTechInvestment;
-		double					tradeTechInvestment;
-		double					navalTechInvestment;
-		double					landTechInvestment;
+		string						tag;
+		string						historyFile;
+		string						government;
+		string						primaryCulture;
+		vector<string>				acceptedCultures;
+		string						religion;
+		EU3Ruler*					monarch;
+		EU3Ruler*					heir;
+		EU3Ruler*					regent;
+		vector<EU3History*>		history;
+		vector<EU3Ruler*>			previousMonarchs;
+		string						techGroup;
+		double						governmentTech;
+		double						productionTech;
+		double						tradeTech;
+		double						navalTech;
+		double						landTech;
+		double						governmentTechInvestment;
+		double						productionTechInvestment;
+		double						tradeTechInvestment;
+		double						navalTechInvestment;
+		double						landTechInvestment;
+		vector<EU3Agreement*>	agreements;
 
 		int						capital;
 		int						stability;
